--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,14 @@ div
 {
     text-align: center;   
 }
+
+#hello
+{
+    position: absolute;
+    left: 10%;
+    top: 35%;
+}
+
 /* header */
 header
 {
